# ethos-drive

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
src/ethos_drive/: __init__.py  app.py  config.py  main.py  updater.py
src/ethos_drive/api/: __init__.py  client.py  realtime.py
src/ethos_drive/platform/: __init__.py  shell_ext.py  windows.py
src/ethos_drive/sync/: __init__.py  conflict.py  engine.py  filters.py  scanner.py  state.py  transfer.py  versioning.py  watcher.py
src/ethos_drive/ui/: __init__.py  activity.py  conflicts.py  icons.py  login.py  main_window.py  task_editor.py  theme.py  tray.py  update_progress.py
src/ethos_drive/utils/: __init__.py  crypto.py  logging.py  paths.py
src/resources/installer/: ethos-drive.iss
